# Modular-OTA-TATA

./: .gitignore  CHANGELOG  CMakeLists.txt  PROBLEMS_AND_SOLUTIONS.md  Readme.md  SETUP_GUIDE.md  ingestion.py  supabase-config.yml
.github/workflows/: build-and-deploy-module.yml  main.yml  supabase-upload.yml
backend_manifest/: manifest.json
esp32_loader_firmware/: custom_partitions.csv  platformio.ini
esp32_loader_firmware/include/: config.h.example  module_loader.h  ota_updater.h  system_api.h
esp32_loader_firmware/src/: main.cpp  module_loader.cpp  ota_updater.cpp
mock_drivers/: Makefile.generic
mock_drivers/distance_sensor/: Makefile
mock_drivers/distance_sensor/src/: distance_sensor.c  distance_sensor_v1_1_0.c
mock_drivers/speed_governor/: Makefile
mock_drivers/speed_governor/src/: speed_governor.c
mock_drivers/speed_governor_v2/: Makefile
mock_drivers/speed_governor_v2/src/: speed_governor.c
rpi_ota_system/: README.md  install.sh  requirements.txt
rpi_ota_system/config/: gpio_config.yaml  logging_config.yaml  system_config.yaml
rpi_ota_system/modules/: __init__.py  base_module.py
rpi_ota_system/modules/distance_sensor/: __init__.py  distance_sensor.py
rpi_ota_system/modules/speed_governor/: __init__.py  speed_governor.py
rpi_ota_system/src/: __init__.py  main.py  module_loader.py  ota_updater.py  system_api.py
rpi_ota_system/src/hardware/: __init__.py  gpio_controller.py
scripts/: deploy-to-supabase.sh
